--- a/css/myclass.css
+++ b/css/myclass.css
@@ -56,7 +56,7 @@ header {
     -ms-user-select: none;
     user-select: none;
     background-image: none;
-    border: 1px solid #0000003d;
+    border: 1px solid #0000003d !important;
     border-radius: 4px;
 }
 
