--- a/css/myclass.css
+++ b/css/myclass.css
@@ -62,6 +62,22 @@ header {
     border-radius: 4px;
 }
 
+.three-quarters-loader:not(:required) {
+    -moz-animation: three-quarters-loader 1250ms infinite linear;
+    -webkit-animation: three-quarters-loader 1250ms infinite linear;
+    animation: three-quarters-loader 1250ms infinite linear;
+    border: 12px solid #38e;
+    border-right-color: transparent;
+    border-radius: 25px;
+    box-sizing: border-box;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    text-indent: -9999px;
+    width: 50px;
+    height: 50px;
+}
+
 .btn {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
